--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="judo.html">柔道</a></li>
                 <li><a href="swimming.html">水泳</a></li>
                 <li><a href="badminton.html">バドミントン</a></li>
+                <li><a href="soccer.html">サッカー</a></li>
             </ul>
         </nav>
     </header>
