バドミントン追加

--- a/badminton.html
+++ b/badminton.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>バドミントン - スポーツ選手紹介</title>
     <link rel="stylesheet" href="css/sports.css">
+    <link rel="stylesheet" href="css/badminton.css">
 </head>
 <body>
     <header class="header">
