--- a/baseball.html
+++ b/baseball.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>野球 - スポーツ選手紹介</title>
     <link rel="stylesheet" href="css/sports.css">
+    <link rel="stylesheet" href="css/baseball.css">
 </head>
 <body>
     <header class="header">
