柔道・写真追加

--- a/judo.html
+++ b/judo.html
@@ -37,12 +37,12 @@
         <h3>選手</h3>
         <div class="player-list">
             <div class="player">
-                <img src="images/inoue.jpg" alt="井上康生">
-                <p>井上康生</p>
+                <img src="images/abe1.jpg" alt="阿部一二三">
+                <p>阿部一二三</p>
             </div>
             <div class="player">
-                <img src="images/tani.jpg" alt="谷亮子">
-                <p>谷亮子</p>
+                <img src="images/abe2.jpg" alt="阿部詩">
+                <p>阿部詩</p>
             </div>
         </div>
     </main>
