--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="swimming.html">水泳</a></li>
                 <li><a href="badminton.html">バドミントン</a></li>
                 <li><a href="soccer.html">サッカー</a></li>
+                <li><a href="form.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
