--- a/badminton.html
+++ b/badminton.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="baseball.html">野球</a></li>
-                <li><a href="judo.html">柔道</a></li>
+                <li><a href="judo.html">柔vvvv道</a></li>
                 <li><a href="swimming.html">水泳</a></li>
                 <li><a href="badminton.html">バドミントン</a></li>
                 <li><a href="soccer.html">サッカー</a></li>
