--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
 <style>body{font-family:Arial,sans-serif}:root{--border-radius:1rem}</style>
 <style>.page-enter-active,.page-leave-active{transition:all .4s}.page-enter-from,.page-leave-to{filter:blur(1rem);opacity:0}</style>
 <link rel="stylesheet" href="/_nuxt/entry.B0b_3z4T.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/NTCrr4LP.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/MOG0t3h4.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.sYfPwBi2.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D6-4zGzC.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/I_0fPbKu.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/cUc5VHE6.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BGOyCeuq.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dk5nUi9u.js">
-<script type="module" src="/_nuxt/NTCrr4LP.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1739886463570,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"a89796ed-0295-4c51-ada3-36f6c71c54c2",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cb2R9-rE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bzq-IHh-.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/gOsV9kwP.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DgmaqstD.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DchUupuC.js">
+<script type="module" src="/_nuxt/MOG0t3h4.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1739886768289,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"9b1809fd-09ab-4f06-86ce-ae8e4833d873",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
